services/image_greyscale/kubernetes/image_greyscale.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: image-greyscale-stateful
  labels:
    app: image-greyscale
spec:
  serviceName: image-greyscale
  replicas: 1
  selector:
    matchLabels:
      app: image-greyscale
  template:
    metadata:
      labels:
        app: image-greyscale
    spec:
      containers:
      - name: image-greyscale
        image: ghcr.io/csia-pme/csia-pme-image-greyscale:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
