services/image_greyscale/kubernetes/image_greyscale.service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-greyscale-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 9292
      targetPort: 80
      protocol: TCP
  selector:
    app: image-greyscale
